# chesster

./: .gitignore  README.md  RUN_DESKTOP_APP.md  Taskfile.yml  pyproject.toml  test_api.py
.claude/agents/: frontend-architect.md
.claude/plans/: multi-page-redesign.md
core_api/: alembic.ini  chess_platform.db  pyproject.toml  run.py
core_api/alembic/: env.py
core_api/alembic/versions/: 544377a62ddb_initial_migration.py
core_api/core_api/: main.py
core_api/core_api/adapters/chess_engine/: __init__.py  stockfish_adapter.py
core_api/core_api/adapters/llm/: __init__.py  anthropic_adapter.py  factory.py  gemini_adapter.py  local_adapter.py  openai_adapter.py
core_api/core_api/api/: router.py
core_api/core_api/api/endpoints/: analysis.py  auth.py  chess.py  coach.py  games.py  users.py
core_api/core_api/core/: config.py
core_api/core_api/crud/: game.py  user.py
core_api/core_api/db/: base.py  session.py
core_api/core_api/domain/: __init__.py
core_api/core_api/domain/ports/: __init__.py  chess_engine_port.py  llm_port.py
core_api/core_api/models/: __init__.py  game.py  user.py
core_api/core_api/schemas/: __init__.py  analysis.py  game.py  user.py
core_api/core_api/services/: chesscom_service.py  coach_service.py  llm_analysis_service.py  move_analysis_service.py
desktop_client/: main.py  pyproject.toml  requirements.txt  run_app.py
desktop_client/desktop_client/: main.py  main_api.py
desktop_client/desktop_client/pages/: __init__.py
desktop_client/desktop_client/pages/analysis/: __init__.py  analysis_page.py  analysis_state.py
desktop_client/desktop_client/pages/analysis/components/: __init__.py  analysis_panel.py  game_list.py  game_viewer.py
desktop_client/desktop_client/pages/game/: __init__.py  exploration_state.py  game_page.py  game_state.py  models.py
desktop_client/desktop_client/pages/game/components/: __init__.py  chess_board.py  coach_chat.py  exploration_controls.py  game_controls.py  line_card.py  lines_message.py
desktop_client/desktop_client/pages/home/: __init__.py  home_page.py
desktop_client/desktop_client/pages/settings/: __init__.py  settings_page.py  settings_state.py
desktop_client/desktop_client/pages/settings/components/: __init__.py  account_form.py  chesscom_form.py  llm_config_form.py
desktop_client/desktop_client/services/: api_client.py
desktop_client/desktop_client/shared/: __init__.py
desktop_client/desktop_client/shared/components/: __init__.py  navigation.py
desktop_client/desktop_client/shared/services/: __init__.py  config_service.py
shared/: pyproject.toml
shared/shared/: __init__.py  chess_service.py
web/: package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/shared/: Sidebar.tsx
web/src/hooks/: useChessGame.ts  useExploration.ts
web/src/pages/analysis/: AnalysisPage.tsx
web/src/pages/analysis/components/: AnalysisPanel.tsx  GameList.tsx  GameViewer.tsx
web/src/pages/game/: GamePage.tsx  useGameState.ts
web/src/pages/home/: HomePage.tsx
web/src/pages/settings/: SettingsPage.tsx
web/src/types/: index.ts
(+13 files in other folders)
